k3s/generated_manifests/llama/Service-llama-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: llama.doma.lol
    external-dns.alpha.kubernetes.io/target: homelab.boreal-scala.ts.net
  name: llama-tailscale
  namespace: llama
spec:
  clusterIP: None
  type: ClusterIP
