k3s/generated_manifests/llama/IngressRoute-llama.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: llama
  namespace: llama
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`llama.doma.lol`)
      services:
        - name: llama
          port: 80
